--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@headlessui/react": "^2.2.0",
     "@types/node": "^20.12.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
