--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^6.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -75,6 +76,7 @@
     "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
+    "shadcn-ui": "^0.9.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^4.9.3",
     "vite": "^4.5.5"
